# Pico-MPU-9250

./: .gitignore  CMakeLists.txt  README.md  example_auto_set_url.cmake  pico_sdk_import.cmake
Examples/: CMakeLists.txt  eulerAngleExample.c  objectExample.cpp
mpu_9250/: CMakeLists.txt  mpu9250.c  mpu9250.h  mpuObject.cpp  mpuObject.h
